# Bridge-Attendance

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  QUICKSTART_PROMPT.md  README.md
attendance-pdf/: .gitignore  Cargo.toml
attendance-pdf/examples/: roster.json
attendance-pdf/src/: main.rs
attendance-pdf/tests/: integration_test.rs
worker/: README.md  package-lock.json  package.json  wrangler.toml
worker/migrations/: 0001_initial_schema.sql  0002_members_table.sql
worker/scripts/: generate-signin-sheet.sh  import-members-csv.sh  import-ocr-json.sh
worker/src/: errors.ts  index.ts  types.ts
worker/src/api/: attendance.ts  confirm.ts  events.ts  mailing-list.ts  members.ts  ocr.ts  photos.ts  scan.ts  students.ts
worker/src/db/: queries.ts
worker/src/middleware/: auth.ts
worker/src/ocr/: claude-vision.ts
worker/src/utils/: id.ts
