[package]
name = "attendance-pdf"
version = "0.1.0"
edition = "2021"
description = "Generate attendance sheets with QR codes for bridge classes"
authors = ["Rick"]
license = "MIT"

[dependencies]
printpdf = "0.7"
qrcode = "0.14"
image = "0.25"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"

[profile.release]
strip = true
lto = true
